--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -18,3 +18,17 @@
     transition: 1s ease;
     cursor: pointer;
 }
+
+.question {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    height: 20vh;
+}
+
+.question h2 {
+    letter-spacing: 3px;
+    transition: 2s ease-in;
+}
