--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -25,10 +25,45 @@
     align-items: center;
     flex-direction: column;
 
+    cursor: pointer;
+
     height: 20vh;
 }
 
 .question h2 {
     letter-spacing: 3px;
-    transition: 2s ease-in;
+    transition: 1s ease-in;
+}
+
+.question h2:hover {
+    letter-spacing: 1px;
+    transition: 1s ease-in;
+}
+
+.answers {
+    display: flex;
+    flex-direction: row;
+
+    align-items: center;
+    justify-content: space-around;
+}
+
+.answers button {
+    background: none;
+
+    border: 1px solid cadetblue;
+    border-radius: 5px;
+
+    cursor: pointer;
+
+    padding: 10px 25px;
+    margin: 5px;
+
+    font-size: 2em;
+    letter-spacing: 0.2em;
+    transition: 0.5s ease-in;
+}
+
+.answers button:hover {
+    transform: skewX(15deg);
 }
