--- a/src/styles/navigation.css
+++ b/src/styles/navigation.css
@@ -3,20 +3,20 @@
 }
 
 .nav-back {
-    margin: 50px 50px;
-    padding: 20px;
+    margin: 5vh;
 }
 
-.nav-back a, a:visited, a:active, a:any-link {
+.nav-back a, a:visited, a:hover, a:any-link {
     text-decoration: none;
     cursor: pointer;
 
     font-size: 1.5em;
     letter-spacing: 0.15em;
     color: blue;
+
 }
 
 .nav-back:hover {
-    transform: scale(1.1);
+    transform: scale(0.9);
     transition: 0.5s ease-in;
 }
