added new questions and iterate them over in the YesAnswer component

--- a/src/styles/quiz.css
+++ b/src/styles/quiz.css
@@ -39,3 +39,15 @@
     cursor: pointer;
     transform: scale(0.95);
 }
+
+.answered {
+    display: flex;
+
+    justify-content: center;
+    align-items: center;
+
+    width: 100vw;
+    height: 60vh;
+
+    font-size: 2em;
+}
