--- a/src/styles/quiz.css
+++ b/src/styles/quiz.css
@@ -1,4 +1,4 @@
-.yes-quiz-container {
+.quiz-container {
     display: flex;
 
     flex-direction: column;
@@ -7,7 +7,7 @@
     justify-content: center;
 }
 
-.yes-quiz-question {
+.quiz-question {
     display: flex;
 
     flex-direction: column;
@@ -15,13 +15,13 @@
     align-items: center;
     justify-content: center;
 
-    font-size: 1.8em;
+    font-size: 3.2em;
 
     width: 80vw;
     height: 10vh;
 }
 
-.yes-quiz-answers {
+.quiz-answers {
     display: flex;
 
     flex-direction: row;
@@ -29,13 +29,19 @@
     justify-content: space-around;
     align-items: center;
 
-    font-size: 1.2em;
+    font-size: 1.4em;
 
     width: 80vw;
-    height: 20vh;
+    height: 40vh;
 }
 
-.yes-quiz-answer:hover {
+.quiz-answer {
+    border-bottom: 1px solid blue;
+    padding: 10px 10px;
+    border-radius: 10px 10px;
+}
+
+.quiz-answer:hover {
     cursor: pointer;
     transform: scale(0.95);
 }
@@ -50,4 +56,17 @@
     height: 60vh;
 
     font-size: 2em;
+
+    animation: answeredAnim 2s ease-in;
+}
+
+@keyframes answeredAnim {
+    from {
+        opacity: 0;
+        transform: translateY(-5%);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
