added component for the answered questions and use it in the three main components for the questions

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -58,6 +58,9 @@
     align-items: center;
     justify-content: space-around;
 
+    height: 30vh;
+    width: 100vw;
+
     animation: answerKeyframesEnter 1s ease-in;
 }
 
