--- a/src/styles/quiz.css
+++ b/src/styles/quiz.css
@@ -27,9 +27,10 @@
     justify-content: center;
 
     font-size: 3.2em;
-
-    width: 80vw;
-    height: 10vh;
+    letter-spacing: 0.1em;
+    word-spacing: 0.15em;
+    width: 70vw;
+    min-height: 15vh;
 }
 
 .quiz-answers {
@@ -42,19 +43,28 @@
 
     font-size: 1.4em;
 
-    width: 80vw;
+    width: 90vw;
     height: 40vh;
 }
 
 .quiz-answer {
-    border-bottom: 1px solid blue;
+    font-weight: 300;
+    letter-spacing: 0.05em;
+
+    border-bottom: 2px solid #DCE3FF;
     padding: 10px 10px;
-    border-radius: 10px 10px;
+    border-radius: 15px 5px;
 }
 
-.quiz-answer:hover {
+.quiz-answer:hover, .quiz-answer:focus {
     cursor: pointer;
-    transform: scale(0.95);
+
+    background-color: #fff8dc;
+    color: black;
+    border-bottom: 4px solid #DCE3FF;
+
+    transition: all 0.3s ease-in;
+    transform: scale(1.05);
 }
 
 .answered {
@@ -68,27 +78,40 @@
     width: 100vw;
     height: 60vh;
 
-    font-size: 2em;
+    font-size: 1.5em;
 
     animation: answeredAnim 1s ease-in;
 }
 
-.message-success {
-    color: green;
+.answered .message-success {
+    color: white;
+    background-color: #003D04;
+    border-radius: 5px 35px;
+    padding: 2% 3%;
 }
 
 
-.user-answer-title {
+.answered .user-answer-title {
+    font-weight: 300;
+    letter-spacing: 0.15em;
+    word-spacing: 0.2em;
     display: flex;
-
-    margin: auto 2vh;
-}
-
-.user-answer {
-    display: flex;
-
     justify-content: center;
-    align-items: center;
+    margin: 2vh;
+
+    padding: 0px 10px 5px 10px;
+
+    border-bottom: 2px solid #DCE3FF;
+    border-right: 3px solid #DCE3FF;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 20px;
+}
+
+.answered .user-answer {
+    display: flex;
+
+    justify-content: flex-start;
+    align-items: flex-start;
 
     margin: auto 1vh;
 }
@@ -96,6 +119,49 @@
 #blue {
     color: blue;
 }
+
+.answered .answer-list {
+    margin: 30px;
+    width: 40vw;
+
+    display: flex;
+    flex-direction: column;
+
+    justify-content: center;
+}
+
+.answered .answer-list ol.roman {
+    list-style-type: upper-roman;
+    color: slateblue;
+    list-style-position: inside;
+}
+
+.answered .answer-list ol.roman li {
+    letter-spacing: 0.15em;
+    word-spacing: 0.2em;
+    text-align: right;
+}
+
+::marker {
+    color: #4182B8;
+}
+
+
+/* navigation */
+.back-again {
+    display: flex;
+
+    justify-content: center;
+    align-items: center;
+
+    padding: 10px 0px;
+
+    width: 50%;
+
+    margin: 5%;
+    border-bottom: 2px solid #DCE3FF;
+}
+
 
 @keyframes quizAnimation {
     from {
