--- a/src/styles/mainmenu.css
+++ b/src/styles/mainmenu.css
@@ -8,10 +8,53 @@
 
 
     width: 30vw;
-    height: 5vh;
+    height: 7vh;
 
     position: fixed;
-    bottom: 5vh;
-    left: 1vw;
+    bottom: 0;
+    left: 4vw;
+
+    background-color: rgba(255, 255, 255, 0.9);
+    border-top-right-radius: 3vw;
+    border-top-left-radius: 3vw;
+    border: 1px solid rgba(0, 42, 182, 0.7);
+}
+
+.menu:hover,
+.menu:focus-visible {
+    background-color: rgba(255, 255, 255, 0.7);
+}
+
+.menu a:any-link {
+    color: black;
+    text-shadow: 1px 1px 2px whitesmoke;
+    font-weight: bold;
+    letter-spacing: 0.2rem;
+    transition: all 0.5s ease;
+}
+
+.menu li {
+    width: 30vw;
+    height: 7vh;
+
+    display: flex;
+
+    justify-content: center;
+    align-items: center;
+}
+
+li:first-child {
+    border-top-left-radius: 3vw;
+}
+
+li:last-child {
+    border-top-right-radius: 3vw;
+}
+
+.menu li:hover,
+.menu li:focus-visible {
+
+    background-color: rgba(0, 42, 182, 0.2);
+    transition: all 0.5s ease;
 
 }
