--- a/src/styles/questions.css
+++ b/src/styles/questions.css
@@ -1,83 +1,9 @@
-:root {
-    /* BORDERS */
-    --BORDER-RADIUS: 30px;
-    --BORDER: 1px solid blue;
-    /*  */
-}
-
 .container__questions {
-    display: grid;
-
-    grid-template-rows: 50% 50%;
-    grid-template-columns: auto auto auto;
-
-    gap: 2vh;
-
-    padding: 3vh;
-
-    font-size: 1.5rem;
-
-}
-
-.cell__questions {
     display: flex;
 
     justify-content: center;
     align-items: center;
 
-    padding: 20px;
-
-    border: 1px solid black;
+    flex-flow: column nowrap;
 }
 
-.cell__questions.header__questions {
-
-    font-size: 2.25rem;
-    font-weight: bold;
-    letter-spacing: 0.15rem;
-
-    background-color: #000;
-    color: whitesmoke;
-}
-
-
-.cell__questions.header__questions:first-child {
-    border-top-left-radius: var(--BORDER-RADIUS);
-}
-
-.cell__questions.header__questions:nth-child(3) {
-    border-top-right-radius: var(--BORDER-RADIUS);
-}
-
-.cell__questions:last-child {
-    border-bottom-right-radius: var(--BORDER-RADIUS);
-}
-
-.cell__questions:nth-last-child(3) {
-    border-bottom-left-radius: var(--BORDER-RADIUS);
-}
-
-/** || FORMS */
-
-.difficulty {
-    padding: 10px;
-    background-color: aliceblue;
-
-    font-size: 1.2rem;
-
-    border: var(--BORDER);
-
-    width: 50%;
-}
-
-.buttons {
-    margin: auto 5%;
-
-    font-size: 1.2rem;
-
-    cursor: pointer;
-
-    padding: 10px;
-    border: var(--BORDER);
-    background-color: aliceblue;
-}
