--- a/src/styles/mainmenu.css
+++ b/src/styles/mainmenu.css
@@ -25,12 +25,20 @@
     background-color: rgba(255, 255, 255, 0.7);
 }
 
-.menu a:any-link {
+.menu li a:any-link {
     color: black;
     text-shadow: 1px 1px 2px whitesmoke;
     font-weight: bold;
     letter-spacing: 0.2rem;
     transition: all 0.5s ease;
+
+    margin: 0px;
+    display: block;
+    width: 100%;
+    height: 100%;
+
+    text-align: center;
+    padding: 2vh 0px;
 }
 
 .menu li {
@@ -41,6 +49,8 @@
 
     justify-content: center;
     align-items: center;
+
+    padding: 0;
 }
 
 li:first-child {
@@ -58,3 +68,4 @@ li:last-child {
     transition: all 0.5s ease;
 
 }
+
