--- a/src/styles/questions.css
+++ b/src/styles/questions.css
@@ -1,13 +1,3 @@
-.container {
-    display: flex;
-
-    flex-flow: column nowrap;
-
-    justify-content: center;
-    align-items: center;
-
-    margin: 3vh 5vw;
-}
 
 .container__questions {
     display: flex;
@@ -80,7 +70,7 @@
     padding: 20px;
 }
 
-.navigation {
+.navigation__questions {
     display: flex;
 
     flex-direction: column;
@@ -89,6 +79,6 @@
     align-items: center;
 }
 
-.navigation.item {
+.navigation__questions.item {
     padding: 20px 10px;
 }
