--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -2,7 +2,7 @@
 
     /** Spacing **/
     --LETTER-SPACING-ABOUT: 0.12rem;
-
+    --LETTER-SPACING-ABOUT-MOBILE: 0.5rem;
     /** Borders **/
     --BORDER-BLUE: 1px solid blue;
 
@@ -11,7 +11,6 @@
 }
 
 .container__about {
-    width: 100vw;
     min-height: 80vh;
 }
 
@@ -20,6 +19,10 @@
 
     justify-content: center;
     align-items: flex-start;
+}
+
+.title__about h1 {
+    font-size: 1.8rem;
 }
 
 .title__about a {
@@ -106,13 +109,13 @@ img {
 
 .tech-stack__about h1 {
     font-size: 2rem;
-    letter-spacing: var(--LETTER-SPACING-ABOUT);
+    letter-spacing: var(--LETTER-SPACING-ABOUT-MOBILE);
     margin: auto 2vw;
 }
 
 .tech-stack__about h2 {
     font-size: 1.5rem;
-    letter-spacing: var(--LETTER-SPACING-ABOUT);
+    letter-spacing: var(--LETTER-SPACING-ABOUT-MOBILE);
     margin: 1vh 3vw;
 }
 
@@ -128,4 +131,70 @@ img {
 .tech-stack__about ul li a {
     font-size: 1.2rem;
     letter-spacing: var(--LETTER-SPACING-ABOUT);
+}
+
+/** Mobile **/
+@media screen and (max-width: 768px) {
+    .container__about {
+        min-height: 60vh;
+    }
+
+    .intro__about p {
+        font-size: 0.8rem;
+    
+        letter-spacing: var(--LETTER-SPACING-ABOUT);
+        word-spacing: 0.15rem;
+        width: 80vw;
+    }
+
+    img {
+        scale: 0.75;
+        border: var(--BORDER-BLUE);
+        border-radius: 50%;
+    }
+
+    section.subintro__about {
+        width: 90vw;
+    }
+    
+    section.subintro__about h3 {
+        font-size: 1.2rem;
+    }
+    
+    section.subintro__about p {
+        font-size: 0.8rem;
+        padding: 0;
+    
+        align-items: flex-start;
+        letter-spacing: var(--LETTER-SPACING-ABOUT);
+        word-spacing: 0.1rem;
+        word-wrap: break-word;
+        text-indent: 3vh;
+    }
+
+    .tech-stack__about h1 {
+        font-size: 1.8rem;
+        letter-spacing: var(--LETTER-SPACING-ABOUT);
+        margin: auto 1vw;
+    }
+    
+    .tech-stack__about h2 {
+        font-size: 0.9rem;
+        letter-spacing: var(--LETTER-SPACING-ABOUT);
+        margin: 1vh 2vw;
+    }
+    
+    .tech-stack__about ul {
+        margin: 1vh 9vw;
+        list-style-type: upper-roman;
+        font-size: 0.8rem;
+        letter-spacing: var(--LETTER-SPACING-ABOUT);
+    
+        margin-bottom: 15vh;
+    }
+    
+    .tech-stack__about ul li a {
+        font-size: 0.8rem;
+        letter-spacing: var(--LETTER-SPACING-ABOUT);
+    }
 }
