--- a/src/styles/contacts.css
+++ b/src/styles/contacts.css
@@ -58,3 +58,60 @@
     text-decoration: none;
     border: none;
 }
+
+/** Mobile **/
+@media screen and (max-width: 768px) {
+    .contacts-container__contacts {
+
+        text-align: center;
+    
+        display: flex;
+        flex-flow: column;
+        justify-content: center;
+        align-items: center;
+    
+        min-height: 60vh;
+        
+        margin: auto;
+    }
+
+    .title__contacts {
+        font-size: 1.1rem;
+        letter-spacing: 0.1rem;
+        font-weight: bold;
+    }
+
+    .contact-button__contacts {
+        margin: 3vh auto;
+    
+        display: flex;
+    
+        justify-content: center;
+        align-items: center;
+    
+        width: 100%;
+        height: 100%;
+    }
+
+    .button-send__contacts {
+        padding: 0.3rem 0.8rem;
+        font-size: 0.8rem;
+        letter-spacing: 0.1rem;
+    
+        border: 1px solid blue;
+        background-color: white;
+    
+        cursor: pointer;
+    }
+
+    .social-links__contacts {
+        display: flex;
+        flex-direction: row;
+    
+        justify-content: space-between;
+        align-items: center;
+    
+        min-width: 50vw;
+        margin: 3vh auto;
+    }
+}
