--- a/src/styles/navigation.css
+++ b/src/styles/navigation.css
@@ -26,3 +26,31 @@
     transform: scale(0.9);
     transition: 0.5s ease-in;
 }
+
+@media screen and (max-width: 768px) {
+    
+    .nav {
+        display: flex;
+    
+        justify-content: flex-start;
+        align-items: center;
+    
+        min-height: 7vh;
+    }
+    
+    .nav .nav-back {
+        display: flex;
+        margin: auto 3vh;
+    }
+    
+    .nav-back a, a:visited, a:hover, a:any-link {
+        text-decoration: none;
+        cursor: pointer;
+    
+        font-size: 1.2em;
+        letter-spacing: 0.1em;
+        color: blue;
+    
+    }
+
+}
