--- a/src/styles/questions.css
+++ b/src/styles/questions.css
@@ -12,6 +12,18 @@
     margin: 3vh 5vw;
 }
 
+.italic {
+    font-style: italic;
+    font-weight: 300;
+}
+
+.container__titles__questions {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .question__questions {
     font-size: 1.5rem;
 
@@ -81,4 +93,75 @@
 
 .navigation__questions.item {
     padding: 20px 10px;
+}
+
+/** Mobile **/
+@media screen and (max-width: 768px) {
+    .container__questions {
+        display: flex;
+    
+        flex-flow: column nowrap;
+    
+        justify-content: center;
+        align-items: center;
+    
+        min-height: 20vh;
+    
+        margin: 1vh 3vw;
+    }
+
+    .container__titles__questions {
+        display: flex;
+        
+        justify-content: center;
+        align-items: center;
+
+        flex-direction: column;
+
+        margin: 3vh 1vw;
+    }
+
+    .container__titles__questions h2 {
+        font-size: 1.1rem;
+    }
+
+    .container__titles__questions h3 {
+        margin: 1vh 2vw;
+        font-size: 0.9rem;
+    }
+
+    .question__questions {
+        font-size: 0.7rem;
+    
+        word-spacing: 0.1rem;
+        letter-spacing: 0.05rem;
+
+        margin: 3vh 3vw;
+        min-height: 10vh;
+    }
+    
+    .answers__questions {
+        display: flex;
+        
+        flex-flow: column;
+    
+        justify-content: center;
+        align-items: center;
+    
+        height: 10vh;
+    }
+
+    .answer__questions {
+        display: flex;
+
+        margin: 1vh 1vw;
+    
+        font-weight: 300;
+        letter-spacing: 0.02em;
+    
+        border-bottom: 2px solid #DCE3FF;
+        padding: 10px 10px;
+        border-radius: 15px 5px;
+    }
+
 }
